098_bst_map/grade.txt
Grading at 11/03/2020:23:41:12.056554
For commit ID f73474f4db9695343fca24d05cf53d9c8358cbc6
Grading at Tue Nov  3 18:41:10 EST 2020
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = int]’:
89-tester.cpp:131:10:   required from here
bstmap.h:112:17: error: no match for ‘operator*’ (operand type is ‘const BstMap<int, int>’)
     if (this != *rhs) {
                 ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:131:10:   required from here
bstmap.h:112:17: error: no match for ‘operator*’ (operand type is ‘const BstMap<int, std::__cxx11::basic_string<char> >’)
     if (this != *rhs) {
                 ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = Tester]’:
89-tester.cpp:131:10:   required from here
bstmap.h:112:17: error: no match for ‘operator*’ (operand type is ‘const BstMap<int, Tester>’)
     if (this != *rhs) {
                 ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = int]’:
89-tester.cpp:131:10:   required from here
bstmap.h:112:17: error: no match for ‘operator*’ (operand type is ‘const BstMap<std::__cxx11::basic_string<char>, int>’)
     if (this != *rhs) {
                 ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:131:10:   required from here
bstmap.h:112:17: error: no match for ‘operator*’ (operand type is ‘const BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’)
     if (this != *rhs) {
                 ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
89-tester.cpp:131:10:   required from here
bstmap.h:112:17: error: no match for ‘operator*’ (operand type is ‘const BstMap<std::__cxx11::basic_string<char>, Tester>’)
     if (this != *rhs) {
                 ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = int]’:
89-tester.cpp:131:10:   required from here
bstmap.h:112:17: error: no match for ‘operator*’ (operand type is ‘const BstMap<Tester, int>’)
     if (this != *rhs) {
                 ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:131:10:   required from here
bstmap.h:112:17: error: no match for ‘operator*’ (operand type is ‘const BstMap<Tester, std::__cxx11::basic_string<char> >’)
     if (this != *rhs) {
                 ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = Tester]’:
89-tester.cpp:131:10:   required from here
bstmap.h:112:17: error: no match for ‘operator*’ (operand type is ‘const BstMap<Tester, Tester>’)
     if (this != *rhs) {
                 ^~~~
The code did not compile.  This test failed.

Overall Grade: F
